@@ -84,7 +84,7 @@ def buildHive(args) {
 set -x
 . /etc/profile.d/confs.sh
 export USER="`whoami`"
-export MAVEN_OPTS="-Xmx4G --add-opens java.base/java.net=ALL-UNNAMED"
+export MAVEN_OPTS="-Xmx4G"
 export -n HIVE_CONF_DIR
 sw java 17 && . /etc/profile.d/java.sh
 cp $SETTINGS .git/settings.xml
